--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,8 +14,8 @@
 #  weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Research Method"
+  url = "#skills"
   weight = 30
 
 [[main]]
