--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -27,6 +27,11 @@
   name = "Contact"
   url = "#contact"
   weight = 60
+  
+ [[main]]
+  name = "Collabrators"
+  url = "#people"
+  weight = 65
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
