--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -30,7 +30,7 @@
   
  [[main]]
   name = "Collabrators"
-  url = "#people"
+  url = "#projects"
   weight = 65
 
 # Link to a PDF of your resume/CV from the menu.
