--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,15 +23,15 @@
   url = "#publications"
   weight = 40
 
-[[main]]
+#[[main]]
   name = "Collabrators"
   url = "#projects"
   weight = 50
   
 [[main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 60
+#  name = "Contact"
+#  url = "#contact"
+#  weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
