--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,9 +24,9 @@
   weight = 40
 
 #[[main]]
-  name = "Collabrators"
-  url = "#projects"
-  weight = 50
+#  name = "Collabrators"
+#  url = "#projects"
+#  weight = 50
   
 [[main]]
 #  name = "Contact"
