--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,10 +23,10 @@
   url = "#publications"
   weight = 40
 
-#[[main]]
-#  name = "Collabrators"
-#  url = "#projects"
-#  weight = 50
+[[main]]
+  name = "Collabrators"
+  url = "#projects"
+  weight = 50
   
 [[main]]
   name = "Contact"
