--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -281,7 +281,7 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
+  google_analytics = "UA-172018579-1"
   google_tag_manager = ""
 
 ############################
