--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -7,17 +7,18 @@
   languageCode = "en-us"
   contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
 
- Uncomment the lines below to configure your website in a second language.
+# Uncomment the lines below to configure your website in a second language.
 [zh]
   languageCode = "zh-Hans"
   contentDir = "content/zh"
-  title = "一个室内地质学家的空间"
+  title = "Academic"
   [zh.params]
     description = "Site description in Chinese..."
+
   [[zh.menu.main]]
     name = "主页"
     url = "#about"
-    weight = 1
+    weight = 10
 
   #[[zh.menu.main]]
   #  name = "主要研究方法"
