--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -20,29 +20,29 @@
     url = "#about"
     weight = 10
 
-  #[[zh.menu.main]]
-  #  name = "主要研究方法"
-  #  url = "#skills"
-  #  weight = 30
+  [[zh.menu.main]]
+    name = "主要研究方法"
+    url = "#skills"
+    weight = 30
 
-  #[[zh.menu.main]]
-  #  name = "文章"
-  #  url = "#publications"
-  #  weight = 40
+  [[zh.menu.main]]
+    name = "文章"
+    url = "#publications"
+    weight = 40
 
-  #[[zh.menu.main]]
-  #  name = "合作者"
-  #  url = "#collaborators"
-  #  weight = 50
+  [[zh.menu.main]]
+    name = "合作者"
+    url = "#collaborators"
+    weight = 50
   
-  #[[zh.menu.main]]
-  #  name = "联系我"
-  #  url = "#contact"
-  #  weight = 60
+  [[zh.menu.main]]
+    name = "联系我"
+    url = "#contact"
+    weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-  #[[zh.menu.main]]
-  #  name = "简历"
-  #  url = "files/cv.pdf"
-  #  weight = 70 
+  [[zh.menu.main]]
+    name = "简历"
+    url = "files/cv.pdf"
+    weight = 70 
