--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -44,5 +44,5 @@
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
   [[zh.menu.main]]
     name = "简历"
-    url = "files/cv.pdf"
+    url = "files/简历.pdf"
     weight = 70 
