--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,7 +18,7 @@
   url = "#skills"
   weight = 30
 
-[[zh.menu.main]]
+[[main]]
     name = "Research opportunity"
     url = "#slider"
     weight = 35
