--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -26,6 +26,11 @@
     weight = 30
 
   [[zh.menu.main]]
+    name = "研究组"
+    url = "#people"
+    weight = 33
+
+  [[zh.menu.main]]
     name = "学习机会"
     url = "#slider"
     weight = 35
