--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -104,7 +104,7 @@ directions = "Office 1027 at the Geoscience Building"
 
 # Office hours
 # A list of your office hours. To remove, set to an empty list `[]`.
-office_hours = ["Monday 10:00 to 13:00"]
+# office_hours = ["Tuesday 10:00 to 13:00"]
 
 # Enter an optional link for booking appointments (e.g. calendly.com).
 appointment_url = "https://ical.live/userReserveCalendar?calendarId=648298871248"
