--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,11 +10,11 @@ title = "An 'indoor' geologist's space"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://geogezhiyuan.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy;2020"
+copyright = "&copy;2020  all rights reserved"
 
 ############################
 ## Advanced options below ##
