--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -104,7 +104,7 @@ directions = "Office 1027 at the Geoscience Building"
 
 # Office hours
 # A list of your office hours. To remove, set to an empty list `[]`.
-# office_hours = ["Tuesday 10:00 to 13:00"]
+office_hours = ["Tuesday 10:00 to 11:00"]
 
 # Enter an optional link for booking appointments (e.g. calendly.com).
 appointment_url = "https://ical.live/userReserveCalendar?calendarId=648298871248"
@@ -147,7 +147,7 @@ address_format = "en-us"
 ############################
 
 # Main menu alignment (l = left, c = center, r = right) and logo options.
-main_menu = {align = "l", show_logo = false}
+main_menu = {align = "r", show_logo = true}
 
 # Show estimated reading time for posts? (true/false)
 reading_time = true
