--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -28,10 +28,10 @@
   url = "#publications"
   weight = 40
 
-[[main]]
-  name = "Collaborators"
-  url = "#collaborators"
-  weight = 50
+# [[main]]
+#  name = "Collaborators"
+#  url = "#collaborators"
+#  weight = 50
   
 [[main]]
   name = "Contact"
